--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.5",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
